add lang files for every locale

--- a/assets/minecraft/lang/en_AU.lang
+++ b/assets/minecraft/lang/en_AU.lang
@@ -6,27 +6,27 @@ container.creative=§7Item Selection
 container.dispenser=§7Dispenser
 container.dropper=§7Dropper
 container.enchant=§7Enchant
-container.enderchest=§7Ender Chest
-container.furnace=§7Furnace
+container.enderchest=§7Dropbox
+container.furnace=§7Barbie
 container.hopper=§7Item Hopper
-container.inventory=§7Inventory
-container.minecart=§7Minecart
+container.inventory=§7Backpack
+container.minecart=§7Holden
 container.repair=§7Repair & Name
-entity.EntityHorse.name=§7Horse
-entity.Villager.name=§7Villager
+entity.EntityHorse.name=§7Brumby
+entity.Villager.name=§7Bruce
 entity.donkey.name=§7Donkey
-entity.horse.name=§7Horse
+entity.horse.name=§7Brumby
 entity.mule.name=§7Mule
-entity.skeletonhorse.name=§7Skeleton Horse
-entity.zombiehorse.name=§7Zombie Horse
+entity.skeletonhorse.name=§7Skeleton Brumby
+entity.zombiehorse.name=§7Undead Brumby
 gui.achievements=§fAchievements
-item.minecartChest.name=§7Minecart with Chest
+item.minecartChest.name=§7Holden Ute
 itemGroup.brewing=§7Brewing
 itemGroup.buildingBlocks=§7Building Blocks
 itemGroup.combat=§7Combat
-itemGroup.decorations=§7Decoration Blocks
-itemGroup.food=§7Foodstuffs
-itemGroup.inventory=§7Survival Inventory
+itemGroup.decorations=§7Fancy Blocks
+itemGroup.food=§7Tucker
+itemGroup.inventory=§7Walkabout Inventory
 itemGroup.materials=§7Materials
 itemGroup.misc=§7Miscellaneous
 itemGroup.redstone=§7Redstone
