--- a/assets/minecraft/lang/en_CA.lang
+++ b/assets/minecraft/lang/en_CA.lang
@@ -25,7 +25,7 @@ itemGroup.brewing=§7Brewing
 itemGroup.buildingBlocks=§7Building Blocks
 itemGroup.combat=§7Combat
 itemGroup.decorations=§7Decoration Blocks
-itemGroup.food=§7Foodstuffs
+itemGroup.food=§7Food
 itemGroup.inventory=§7Survival Inventory
 itemGroup.materials=§7Materials
 itemGroup.misc=§7Miscellaneous
