--- a/assets/minecraft/lang/en_GB.lang
+++ b/assets/minecraft/lang/en_GB.lang
@@ -26,10 +26,10 @@ itemGroup.buildingBlocks=§7Building Blocks
 itemGroup.combat=§7Combat
 itemGroup.decorations=§7Decoration Blocks
 itemGroup.food=§7Foodstuffs
-itemGroup.inventory=§7Survival Inventory
+itemGroup.inventory=§7Inventory
 itemGroup.materials=§7Materials
 itemGroup.misc=§7Miscellaneous
 itemGroup.redstone=§7Redstone
-itemGroup.search=§7Search Items
+itemGroup.search=§7Search
 itemGroup.tools=§7Tools
 itemGroup.transportation=§7Transportation
