--- a/assets/minecraft/lang/lb_LU.lang
+++ b/assets/minecraft/lang/lb_LU.lang
@@ -9,27 +9,27 @@ container.enchant=§7Enchant
 container.enderchest=§7Ender Chest
 container.furnace=§7Furnace
 container.hopper=§7Item Hopper
-container.inventory=§7Inventory
+container.inventory=§7Inventaar
 container.minecart=§7Minecart
 container.repair=§7Repair & Name
-entity.EntityHorse.name=§7Horse
-entity.Villager.name=§7Villager
-entity.donkey.name=§7Donkey
-entity.horse.name=§7Horse
-entity.mule.name=§7Mule
-entity.skeletonhorse.name=§7Skeleton Horse
-entity.zombiehorse.name=§7Zombie Horse
+entity.EntityHorse.name=§7Päerd
+entity.Villager.name=§7Awunner
+entity.donkey.name=§7Iesel
+entity.horse.name=§7Päerd
+entity.mule.name=§7Mauldéier
+entity.skeletonhorse.name=§7Skellett Päerd
+entity.zombiehorse.name=§7Zombie Päerd
 gui.achievements=§fAchievements
 item.minecartChest.name=§7Minecart with Chest
-itemGroup.brewing=§7Brewing
+itemGroup.brewing=§7Gebrau
 itemGroup.buildingBlocks=§7Building Blocks
-itemGroup.combat=§7Combat
-itemGroup.decorations=§7Decoration Blocks
-itemGroup.food=§7Foodstuffs
-itemGroup.inventory=§7Survival Inventory
-itemGroup.materials=§7Materials
-itemGroup.misc=§7Miscellaneous
+itemGroup.combat=§7Bekämpfung
+itemGroup.decorations=§7Dekoratiouns Blëck
+itemGroup.food=§7Iëssen
+itemGroup.inventory=§7Iwwerliéwens Inventar
+itemGroup.materials=§7Matérial
+itemGroup.misc=§7Sonstëges
 itemGroup.redstone=§7Redstone
-itemGroup.search=§7Search Items
+itemGroup.search=§7Siich no items
 itemGroup.tools=§7Tools
-itemGroup.transportation=§7Transportation
+itemGroup.transportation=§7Transport
