add lang files for every locale

--- a/assets/minecraft/lang/en_AU.lang
+++ b/assets/minecraft/lang/en_AU.lang
@@ -1,4 +1,4 @@
-container.beacon=§7Beacon
+container.beacon=§7Laser Beam Generater
 container.brewing=§7Brewing Stand
 container.chest=§7Chest
 container.chestDouble=§7Large Chest
@@ -7,38 +7,38 @@ container.creative=§7Item Selection
 container.dispenser=§7Dispenser
 container.dropper=§7Dropper
 container.enchant=§7Enchant
-container.enderchest=§7Ender Chest
-container.furnace=§7Furnace
+container.enderchest=§7Dropbox
+container.furnace=§7Barbie
 container.hopper=§7Item Hopper
-container.inventory=§7Inventory
-container.minecart=§7Minecart
+container.inventory=§7Backpack
+container.minecart=§7Holden
 container.repair=§7Repair & Name
-entity.EntityHorse.name=§7Horse
+entity.EntityHorse.name=§7Brumby
 entity.Villager.armor=§7Armorer
 entity.Villager.butcher=§7Butcher
 entity.Villager.cleric=§7Cleric
-entity.Villager.farmer=§7Farmer
+entity.Villager.farmer=§7Cockie
 entity.Villager.fisherman=§7Fisherman
 entity.Villager.fletcher=§7Fletcher
 entity.Villager.leather=§7Leatherworker
 entity.Villager.librarian=§7Librarian
-entity.Villager.name=§7Villager
-entity.Villager.shepherd=§7Shepherd
+entity.Villager.name=§7Bruce
+entity.Villager.shepherd=§7Jackaroo
 entity.Villager.tool=§7Tool Smith
 entity.Villager.weapon=§7Weapon Smith
 entity.donkey.name=§7Donkey
-entity.horse.name=§7Horse
+entity.horse.name=§7Brumby
 entity.mule.name=§7Mule
-entity.skeletonhorse.name=§7Skeleton Horse
-entity.zombiehorse.name=§7Zombie Horse
+entity.skeletonhorse.name=§7Skeleton Brumby
+entity.zombiehorse.name=§7Undead Brumby
 gui.achievements=§fAchievements
-item.minecartChest.name=§7Minecart with Chest
+item.minecartChest.name=§7Holden Ute
 itemGroup.brewing=§7Brewing
 itemGroup.buildingBlocks=§7Building Blocks
 itemGroup.combat=§7Combat
-itemGroup.decorations=§7Decoration Blocks
-itemGroup.food=§7Foodstuffs
-itemGroup.inventory=§7Survival Inventory
+itemGroup.decorations=§7Fancy Blocks
+itemGroup.food=§7Tucker
+itemGroup.inventory=§7Walkabout Inventory
 itemGroup.materials=§7Materials
 itemGroup.misc=§7Miscellaneous
 itemGroup.redstone=§7Redstone
