--- a/assets/minecraft/lang/en_CA.lang
+++ b/assets/minecraft/lang/en_CA.lang
@@ -14,7 +14,7 @@ container.inventory=§7Inventory
 container.minecart=§7Minecart
 container.repair=§7Repair & Name
 entity.EntityHorse.name=§7Horse
-entity.Villager.armor=§7Armorer
+entity.Villager.armor=§7Armourer
 entity.Villager.butcher=§7Butcher
 entity.Villager.cleric=§7Cleric
 entity.Villager.farmer=§7Farmer
