--- a/assets/minecraft/lang/en_GB.lang
+++ b/assets/minecraft/lang/en_GB.lang
@@ -9,12 +9,12 @@ container.dropper=§7Dropper
 container.enchant=§7Enchant
 container.enderchest=§7Ender Chest
 container.furnace=§7Furnace
-container.hopper=§7Item Hopper
+container.hopper=§7Hopper
 container.inventory=§7Inventory
 container.minecart=§7Minecart
 container.repair=§7Repair & Name
 entity.EntityHorse.name=§7Horse
-entity.Villager.armor=§7Armorer
+entity.Villager.armor=§7Armourer
 entity.Villager.butcher=§7Butcher
 entity.Villager.cleric=§7Cleric
 entity.Villager.farmer=§7Farmer
@@ -24,8 +24,8 @@ entity.Villager.leather=§7Leatherworker
 entity.Villager.librarian=§7Librarian
 entity.Villager.name=§7Villager
 entity.Villager.shepherd=§7Shepherd
-entity.Villager.tool=§7Tool Smith
-entity.Villager.weapon=§7Weapon Smith
+entity.Villager.tool=§7Toolsmith
+entity.Villager.weapon=§7Weaponsmith
 entity.donkey.name=§7Donkey
 entity.horse.name=§7Horse
 entity.mule.name=§7Mule
@@ -38,10 +38,10 @@ itemGroup.buildingBlocks=§7Building Blocks
 itemGroup.combat=§7Combat
 itemGroup.decorations=§7Decoration Blocks
 itemGroup.food=§7Foodstuffs
-itemGroup.inventory=§7Survival Inventory
+itemGroup.inventory=§7Inventory
 itemGroup.materials=§7Materials
 itemGroup.misc=§7Miscellaneous
 itemGroup.redstone=§7Redstone
-itemGroup.search=§7Search Items
+itemGroup.search=§7Search
 itemGroup.tools=§7Tools
 itemGroup.transportation=§7Transportation
