--- a/assets/minecraft/lang/en_GB.lang
+++ b/assets/minecraft/lang/en_GB.lang
@@ -16,7 +16,7 @@ entity.Donkey.name=§7Donkey
 entity.EntityHorse.name=§7Horse
 entity.Mule.name=§7Mule
 entity.SkeletonHorse.name=§7Skeleton Horse
-entity.Villager.armor=§7Armorer
+entity.Villager.armor=§7Armourer
 entity.Villager.butcher=§7Butcher
 entity.Villager.cleric=§7Cleric
 entity.Villager.farmer=§7Farmer
@@ -26,8 +26,8 @@ entity.Villager.leather=§7Leatherworker
 entity.Villager.librarian=§7Librarian
 entity.Villager.name=§7Villager
 entity.Villager.shepherd=§7Shepherd
-entity.Villager.tool=§7Tool Smith
-entity.Villager.weapon=§7Weapon Smith
+entity.Villager.tool=§7Toolsmith
+entity.Villager.weapon=§7Weaponsmith
 entity.ZombieHorse.name=§7Zombie Horse
 gui.achievements=§fAchievements
 item.minecartChest.name=§7Minecart with Chest
@@ -36,10 +36,10 @@ itemGroup.buildingBlocks=§7Building Blocks
 itemGroup.combat=§7Combat
 itemGroup.decorations=§7Decoration Blocks
 itemGroup.food=§7Foodstuffs
-itemGroup.inventory=§7Survival Inventory
+itemGroup.inventory=§7Inventory
 itemGroup.materials=§7Materials
 itemGroup.misc=§7Miscellaneous
 itemGroup.redstone=§7Redstone
-itemGroup.search=§7Search Items
+itemGroup.search=§7Search
 itemGroup.tools=§7Tools
 itemGroup.transportation=§7Transportation
