--- a/assets/minecraft/lang/en_NZ.lang
+++ b/assets/minecraft/lang/en_NZ.lang
@@ -16,7 +16,7 @@ entity.Donkey.name=§7Donkey
 entity.EntityHorse.name=§7Horse
 entity.Mule.name=§7Mule
 entity.SkeletonHorse.name=§7Skeleton Horse
-entity.Villager.armor=§7Armorer
+entity.Villager.armor=§7Armourer
 entity.Villager.butcher=§7Butcher
 entity.Villager.cleric=§7Cleric
 entity.Villager.farmer=§7Farmer
