add lang files for every locale

--- a/assets/minecraft/lang/en_au.lang
+++ b/assets/minecraft/lang/en_au.lang
@@ -17,7 +17,7 @@ entity.Donkey.name=§7Donkey
 entity.Horse.name=§7Horse
 entity.Mule.name=§7Mule
 entity.SkeletonHorse.name=§7Skeleton Horse
-entity.Villager.armor=§7Armorer
+entity.Villager.armor=§7Armourer
 entity.Villager.butcher=§7Butcher
 entity.Villager.cleric=§7Cleric
 entity.Villager.farmer=§7Farmer
@@ -49,7 +49,7 @@ tile.shulkerBoxBlack.name=§7Black Shulker Box
 tile.shulkerBoxBlue.name=§7Blue Shulker Box
 tile.shulkerBoxBrown.name=§7Brown Shulker Box
 tile.shulkerBoxCyan.name=§7Cyan Shulker Box
-tile.shulkerBoxGray.name=§7Gray Shulker Box
+tile.shulkerBoxGray.name=§7Grey Shulker Box
 tile.shulkerBoxGreen.name=§7Green Shulker Box
 tile.shulkerBoxLightBlue.name=§7Light Blue Shulker Box
 tile.shulkerBoxLime.name=§7Lime Shulker Box
@@ -58,6 +58,6 @@ tile.shulkerBoxOrange.name=§7Orange Shulker Box
 tile.shulkerBoxPink.name=§7Pink Shulker Box
 tile.shulkerBoxPurple.name=§7Purple Shulker Box
 tile.shulkerBoxRed.name=§7Red Shulker Box
-tile.shulkerBoxSilver.name=§7Light Gray Shulker Box
+tile.shulkerBoxSilver.name=§7Light Grey Shulker Box
 tile.shulkerBoxWhite.name=§7White Shulker Box
 tile.shulkerBoxYellow.name=§7Yellow Shulker Box
