--- a/assets/minecraft/lang/en_gb.lang
+++ b/assets/minecraft/lang/en_gb.lang
@@ -17,7 +17,7 @@ entity.Donkey.name=§7Donkey
 entity.Horse.name=§7Horse
 entity.Mule.name=§7Mule
 entity.SkeletonHorse.name=§7Skeleton Horse
-entity.Villager.armor=§7Armorer
+entity.Villager.armor=§7Armourer
 entity.Villager.butcher=§7Butcher
 entity.Villager.cleric=§7Cleric
 entity.Villager.farmer=§7Farmer
@@ -27,8 +27,8 @@ entity.Villager.leather=§7Leatherworker
 entity.Villager.librarian=§7Librarian
 entity.Villager.name=§7Villager
 entity.Villager.shepherd=§7Shepherd
-entity.Villager.tool=§7Tool Smith
-entity.Villager.weapon=§7Weapon Smith
+entity.Villager.tool=§7Toolsmith
+entity.Villager.weapon=§7Weaponsmith
 entity.ZombieHorse.name=§7Zombie Horse
 gui.advancements=§fAdvancements
 item.minecartChest.name=§7Minecart with Chest
@@ -38,18 +38,18 @@ itemGroup.combat=§7Combat
 itemGroup.decorations=§7Decoration Blocks
 itemGroup.food=§7Foodstuffs
 itemGroup.hotbar=§7Saved Toolbars
-itemGroup.inventory=§7Survival Inventory
+itemGroup.inventory=§7Inventory
 itemGroup.materials=§7Materials
 itemGroup.misc=§7Miscellaneous
 itemGroup.redstone=§7Redstone
-itemGroup.search=§7Search Items
+itemGroup.search=§7Search
 itemGroup.tools=§7Tools
 itemGroup.transportation=§7Transportation
 tile.shulkerBoxBlack.name=§7Black Shulker Box
 tile.shulkerBoxBlue.name=§7Blue Shulker Box
 tile.shulkerBoxBrown.name=§7Brown Shulker Box
 tile.shulkerBoxCyan.name=§7Cyan Shulker Box
-tile.shulkerBoxGray.name=§7Gray Shulker Box
+tile.shulkerBoxGray.name=§7Grey Shulker Box
 tile.shulkerBoxGreen.name=§7Green Shulker Box
 tile.shulkerBoxLightBlue.name=§7Light Blue Shulker Box
 tile.shulkerBoxLime.name=§7Lime Shulker Box
@@ -58,6 +58,6 @@ tile.shulkerBoxOrange.name=§7Orange Shulker Box
 tile.shulkerBoxPink.name=§7Pink Shulker Box
 tile.shulkerBoxPurple.name=§7Purple Shulker Box
 tile.shulkerBoxRed.name=§7Red Shulker Box
-tile.shulkerBoxSilver.name=§7Light Gray Shulker Box
+tile.shulkerBoxSilver.name=§7Light Grey Shulker Box
 tile.shulkerBoxWhite.name=§7White Shulker Box
 tile.shulkerBoxYellow.name=§7Yellow Shulker Box
